--- a/src/app/home/homepage/testimonials/testimonials.component.html
+++ b/src/app/home/homepage/testimonials/testimonials.component.html
@@ -4,7 +4,7 @@
         <p class="cursive-font red-font read-success-stories">Read our Success Stories</p>
         <p class="title"><i class="green-font">Kind Words</i> From Our<br>Past Clients</p>
         <p>Take a look at our past client's reviews and browse the images on our inspo page!</p>
-        <button (click)="routeToInspo($event)" class="button-theme light-pink-background">See More</button>
+        <button (click)="routeToInspo($event)" class="button-theme white-background">See More</button>
         </div>
     </div>
     <div class="reviews-side">
