change tan to white on small screen

--- a/src/app/inspo/inspo-gallery.component.html
+++ b/src/app/inspo/inspo-gallery.component.html
@@ -11,7 +11,7 @@
             <div class="header-image-container">
                 <img class="title" src="images/inspo-title.png" alt="Inspiration Title">
             </div>
-            <p class="side-text right-text" (click)="navigateToTestimonials()">See Customer Testimonials</p>
+            <p class="side-text right-text tan-background" (click)="navigateToTestimonials()">See Customer Testimonials</p>
         </div>
         <div class="inspo-grid-container">
             <div *ngFor="let photo of inspoPhotos" class="inspo-photo">
