--- a/src/app/shared/header/header.component.css
+++ b/src/app/shared/header/header.component.css
@@ -159,6 +159,7 @@ header {
         width: 100%;
         box-sizing: border-box;
         padding: 15px; 
+        background-color: white;
     }
 
     .links {
