--- a/src/app/inspo/inspo-gallery.component.css
+++ b/src/app/inspo/inspo-gallery.component.css
@@ -48,7 +48,6 @@ body {
   z-index: 2;
   word-wrap: break-word;
   text-align: center;
-  background-color: #faf3eb;
 }
 
 .left-text {
@@ -67,7 +66,7 @@ body {
   border-radius: 999px;
   display: inline-block;
   white-space: nowrap;
-  background: #faf3eb;
+  /* background: #faf3eb; */
   z-index: 2;
 }
 
