--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -11,7 +11,7 @@
             <div class="header-image-container">
                 <img class="title" src="images/testimonials-title.png" alt="Testimonials Title">
             </div>
-            <p class="side-text right-text" (click)="navigateToInspo()">See Inspo Photos</p>
+            <p class="side-text right-text tan-background" (click)="navigateToInspo()">See Inspo Photos</p>
         </div>
         <div class="reviews-container">
             <div *ngFor="let review of reviews" class="review">
