remove head in product page to fix mobile button bug

--- a/src/app/features/product-page/product-page.component.html
+++ b/src/app/features/product-page/product-page.component.html
@@ -1,7 +1,7 @@
-<head>
+<!-- <head>
     <Title>{{ product.name }} - Final Touch Decor</Title>
     <meta name="description" content="{{ product.description }}" />
-</head>
+</head> -->
 
 <body class="container white-background">
 
