--- a/src/app/home/homepage/custom/custom.component.html
+++ b/src/app/home/homepage/custom/custom.component.html
@@ -14,7 +14,7 @@
                 and let us help bring your vision to life with quality materials and 
                 a personal touch.            
             </p>
-            <button class="button-theme white-background" (click)="goToCustomShop($event)">Browse Custom</button>
+            <button class="button button-theme white-background" (click)="goToCustomShop($event)">Browse Custom</button>
         </section>
 
         <picture class="custom-right-container">
