--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -13,7 +13,7 @@
             <p class="location-text secondary-font green-font">SERVING BOISE AND THE TREASURE VALLEY</p>
         </div>
         <h1>Elevate your Event with<br>Custom Signage Rentals</h1>
-        <button (click)="routeToShop()" class="button-theme tan-background">Browse our Collection</button>
+        <button (click)="routeToShop()" class="button button-theme tan-background">Browse our Collection</button>
         <br><br>
     </div>
 </section>
