fix mobile button click and services page layout

--- a/src/app/features/product-page/reserve/reserve.component.html
+++ b/src/app/features/product-page/reserve/reserve.component.html
@@ -51,7 +51,7 @@
       (click)="onCartClick()"
       [disabled]="!isDateRangeValid()"
       type="button"
-      (touchstart)="this.tooltip.show();"
+      (touchend)="onCartClick()"
     >
       ADD TO INQUIRY LIST
     </button>
