change table number hero image

--- a/src/app/home/homepage/hero/hero.component.html
+++ b/src/app/home/homepage/hero/hero.component.html
@@ -20,7 +20,7 @@
 <section class="images-container tan-background">
     <img class="three-image" src="/images/hero-flower-box.png" alt="Arch Decor">
     <img class="three-image" src="/images/hero-seating-chart.png" alt="Table Setting Decor">
-    <img class="three-image" src="/images/hero-table-numbers.png" alt="Custom Signage">
+    <img class="three-image" src="/images/FrostedTable.jpeg" alt="Custom Signage">
 </section>
 <section class="summary-container red-background">
     <img class="summary-flower" src="/images/daisy.png">
